@@ -28,6 +28,9 @@ Version 1.5.0, xxx, 2014 -- Release 1.5
   location of the package.mo file.
   Now, the current directory is used as the default value, which
   can be overwritten using the parameter packagePath.
+- Corrected bug in buildingspy.development.Validator that
+  caused the html section to be not validated if the Modelica
+  file contained the </html> and <html> element on the same line.
 
 Version 1.4.0, February 28, 2014 -- Release 1.4
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
